# discord_summary

./: .gitignore  README.md  config.py  main.py  pyproject.toml
docs/: schedule.md  testing.md
domain/entities/: __init__.py  ai_log.py  alert.py  feedback.py  message.py  server.py
domain/repositories/: __init__.py  ai_log_repository.py  alert_repository.py  config_repository.py  feedback_repository.py  message_repository.py  server_repository.py
infrastructure/db/: database.py  mapper.py  models.py
infrastructure/db/repositories/: ai_log_repository.py  alert_repository.py  config_repository.py  feedback_repository.py  message_repository.py  server_repository.py
migrations/: env.py
migrations/versions/: 549b105697a8_init.py
tests/: conftest.py
tests/infrastructure/db/: test_mapper.py
tests/infrastructure/db/repositories/: test_alert_repository.py  test_config_repository.py  test_server_repository.py
